--- a/app/peaks/package.json
+++ b/app/peaks/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "expeditions",
+    "name": "peaks",
     "version": "0.0.1",
-    "description": "Expeditions",
+    "description": "Peaks",
     "keywords": [
         "ui5",
         "openui5",
