Replaced the Peaks UI with Expedition UI

--- a/app/expeditions/package.json
+++ b/app/expeditions/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "peaks",
+    "name": "expeditions",
     "version": "0.0.1",
-    "description": "Peaks",
+    "description": "Expeditions",
     "keywords": [
         "ui5",
         "openui5",
