--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
-    "@sap/ux-specification": "^1.108.16"
+    "@sap/ux-specification": "^1.108.17",
+    "@wdio/cli": "^8.21.0",
+    "@wdio/local-runner": "^8.21.0",
+    "@wdio/mocha-framework": "^8.21.0",
+    "@wdio/spec-reporter": "^8.21.0",
+    "wdio-ui5-service": "^2.0.2"
   },
   "scripts": {
     "start": "cds-serve",
     "watch-expeditions": "cds watch --open expeditions/webapp/index.html?sap-ui-xx-viewCache=false",
-    "watch-peaks": "cds watch --open peaks/webapp/index.html?sap-ui-xx-viewCache=false"
+    "watch-peaks": "cds watch --open peaks/webapp/index.html?sap-ui-xx-viewCache=false",
+    "wdi5": "wdio run ./app/peaks/webapp/test/wdi5/wdio.conf.js"
   },
   "sapux": [
     "app/expeditions",
-    "app/peaks"
+    "app/peaks",
+    "app/expeditions"
   ]
 }
