--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@wdio/local-runner": "^8.21.0",
     "@wdio/mocha-framework": "^8.21.0",
     "@wdio/spec-reporter": "^8.21.0",
+    "wdio-timeline-reporter": "^5.1.4",
     "wdio-ui5-service": "^2.0.2"
   },
   "scripts": {
     "start": "cds-serve",
     "watch-expeditions": "cds watch --open expeditions/webapp/index.html?sap-ui-xx-viewCache=false",
     "watch-peaks": "cds watch --open peaks/webapp/index.html?sap-ui-xx-viewCache=false",
-    "wdi5": "wdio run ./app/peaks/webapp/test/wdi5/wdio.conf.js"
+    "wdi5": "wdio run ./app/expeditions/webapp/test/wdi5/wdio.conf.js"
   },
   "sapux": [
     "app/expeditions",
